# Recall

./: .gitignore  Cargo.toml  LICENSE  README.md  demo_seed.py
backends/postgres-receipt/: Cargo.toml
backends/postgres-receipt/migrations/: 001_initial.sql
backends/postgres-receipt/src/: lib.rs
backends/seal-encryption/: Cargo.toml
backends/seal-encryption/src/: lib.rs
backends/sui-anchor/: Cargo.toml
backends/sui-anchor/src/: lib.rs
backends/sui-governance/: Cargo.toml
backends/sui-governance/src/: lib.rs
backends/walrus-memory/: Cargo.toml
backends/walrus-memory/src/: lib.rs
backends/walrus-receipt/: Cargo.toml
backends/walrus-receipt/src/: lib.rs
contracts/sui/receipt_anchor/: Move.toml  Published.toml
contracts/sui/receipt_anchor/sources/: receipt_anchor.move
contracts/sui/receipt_anchor/tests/: receipt_anchor_tests.move
contracts/sui/workspace_governance/: Move.toml  Published.toml
contracts/sui/workspace_governance/sources/: governance.move
contracts/sui/workspace_governance/tests/: governance_tests.move
contracts/sui/workspace_registry/: Move.toml  Published.toml
contracts/sui/workspace_registry/sources/: workspace_registry.move
contracts/sui/workspace_registry/tests/: workspace_registry_tests.move
crates/recall-capability/: Cargo.toml
crates/recall-capability/src/: caveat.rs  check.rs  lib.rs  store.rs
crates/recall-conflict/: Cargo.toml
crates/recall-conflict/src/: lib.rs
crates/recall-conformance/: Cargo.toml
crates/recall-conformance/src/: lib.rs  passport_vectors.rs  receipt_vectors.rs
crates/recall-control-plane/: Cargo.toml
crates/recall-control-plane/src/: anchor_scheduler.rs  enforcement.rs  http.rs  main.rs  state.rs  workspace_store.rs
crates/recall-control-plane/src/services/: admission.rs  capability.rs  envelope.rs  handoff.rs  inspector.rs  memory.rs  mod.rs  registry.rs  workspace.rs
crates/recall-core/: Cargo.toml
crates/recall-core/src/: error.rs  ids.rs  lib.rs  types.rs
crates/recall-crypto/: Cargo.toml
crates/recall-crypto/src/: canonical.rs  ed25519.rs  hash.rs  lib.rs
crates/recall-memory/: Cargo.toml
crates/recall-memory/src/: entry.rs  handoff.rs  lib.rs  store.rs  workspace.rs
crates/recall-ops/: Cargo.toml
crates/recall-ops/src/: api.rs  fmt.rs  key.rs  main.rs
crates/recall-ops/src/cmd/: agents.rs  anchors.rs  export.rs  failures.rs  inspect.rs  logs.rs  mod.rs  registry.rs  rollback.rs  why.rs  workspace.rs
crates/recall-passport/: Cargo.toml
crates/recall-passport/src/: lib.rs  store.rs
crates/recall-proto/: Cargo.toml  build.rs
crates/recall-proto/src/: lib.rs
crates/recall-receipt/: Cargo.toml
crates/recall-receipt/src/: builder.rs  lib.rs  merkle.rs  store.rs
crates/recall-registry/: Cargo.toml
crates/recall-registry/src/: lib.rs
crates/recall-transport/: Cargo.toml
crates/recall-transport/src/: envelope.rs  lib.rs  replay.rs  subscribe.rs
interop/go/: conformance_test.go
scripts/: smoke_test.sh
sdks/python/: pyproject.toml
sdks/python/examples/: customer_ops.py  defi_research.py  healthcare_triage.py
sdks/python/src/recall/: __init__.py  client.py  crypto.py  memwal_client.py
sdks/python/src/recall/crewai/: __init__.py
sdks/python/src/recall/langgraph/: __init__.py
sdks/python/src/recall/maf/: __init__.py
sdks/python/src/recall/models/: __init__.py  capability.py  memory.py  passport.py  receipt.py
sdks/python/src/recall/openai_agents/: __init__.py
sdks/typescript/: package.json
sdks/typescript/src/: client.test.ts  client.ts  crypto.ts  index.ts  models.ts  walrus.ts
site/: article.html  docs.html  index.html  writing.html
spec/: common.proto
spec/capability/: capability-v1.proto
spec/constitution/: schema.cedarschema
spec/constitution/canonical-schemas/v1.0.0/examples/: credit-ops.cedar
spec/control-plane/: v1.proto
spec/memory/: memory-v1.proto
spec/passport/: passport-v1.proto
spec/receipt/: receipt-v1.proto
spec/registry/: registry-v1.proto
spec/vectors/: receipt-canonical-v1.json
