[workspace]
resolver = "2"
members = [
    "crates/recall-proto",
    "crates/recall-core",
    "crates/recall-crypto",
    "crates/recall-passport",
    "crates/recall-capability",
    "crates/recall-receipt",
    "crates/recall-memory",
    "crates/recall-conflict",
    "crates/recall-registry",
    "crates/recall-transport",
    "crates/recall-control-plane",
    "crates/recall-ops",
    "crates/recall-conformance",
    "backends/postgres-receipt",
    "backends/walrus-memory",
    "backends/walrus-receipt",
    "backends/sui-anchor",
    "backends/seal-encryption",
    "backends/sui-governance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["KZN Labs"]
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
# gRPC
tonic = { version = "0.11", features = ["tls"] }
tonic-build = "0.11"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8", "pem"] }
sha2 = "0.10"
ring = "0.17"
rand = "0.8"
bech32 = "0.9"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "chrono", "json"] }
# AWS S3
aws-sdk-s3 = "1.30"
aws-config = "1.5"
# UUID
uuid = { version = "1.8", features = ["v7", "serde"] }
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Protobuf vendored protoc
protoc-bin-vendored = "3.0"
# Hex encoding
hex = "0.4"
# Base64
base64 = "0.22"
# Bytes
bytes = "1.6"
# Stream utilities
tokio-stream = "0.1"
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# HTTP server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
