[package]
name = "sui-anchor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
recall-core = { path = "../../crates/recall-core" }
recall-proto = { path = "../../crates/recall-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
bech32 = { workspace = true }
blake2 = "0.10"
tracing = { workspace = true }
