[package]
name = "walrus-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
recall-core = { path = "../../crates/recall-core" }
recall-proto = { path = "../../crates/recall-proto" }
recall-crypto = { path = "../../crates/recall-crypto" }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
