[package]
name = "walrus-receipt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
recall-core = { path = "../../crates/recall-core" }
recall-proto = { path = "../../crates/recall-proto" }
recall-receipt = { path = "../../crates/recall-receipt" }
recall-crypto = { path = "../../crates/recall-crypto" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
