[package]
name = "recall-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "recall-control-plane"
path = "src/main.rs"

[dependencies]
recall-core = { path = "../recall-core" }
recall-proto = { path = "../recall-proto" }
recall-crypto = { path = "../recall-crypto" }
recall-passport = { path = "../recall-passport" }
recall-capability = { path = "../recall-capability" }
recall-receipt = { path = "../recall-receipt" }
recall-memory = { path = "../recall-memory" }
recall-conflict = { path = "../recall-conflict" }
recall-registry = { path = "../recall-registry" }
sui-governance   = { path = "../../backends/sui-governance" }
sui-anchor       = { path = "../../backends/sui-anchor" }
walrus-memory    = { path = "../../backends/walrus-memory" }
seal-encryption  = { path = "../../backends/seal-encryption" }
recall-transport = { path = "../recall-transport" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tokio-stream = "0.1"
axum = { workspace = true }
tower-http = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rand = "0.8"
