[package]
name = "recall-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
