[package]
name = "recall-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
recall-core = { path = "../recall-core" }
recall-proto = { path = "../recall-proto" }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
