[package]
name = "recall-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
recall-core = { path = "../recall-core" }
recall-proto = { path = "../recall-proto" }
recall-crypto = { path = "../recall-crypto" }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
