[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall-sdk"
version = "0.1.0"
description = "RECALL shared memory operating system SDK for AI agents"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "pydantic>=2.7",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.70"]
openai-agents = ["openai-agents>=0.17"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/recall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
